# server/campus_hub/controllers/reviews.py
@@ -47,7 +47,7 @@ def get_reviews() -> APIResponse:
 
         # If reviews are found, return a JSON response
         return response(
-            Status.SUCCESS, reviews=[review.model_dump() for review in reviews]
+            Status.SUCCESS, **reviews[0].model_dump()
         )
     except Exception as e:
         return response(
